fix(admin): Remove double scrollbars This only affects specific versions of specific browsers on specific OSes, but hopefully, this fixes it.

--- a/app/Themes/Admin/assets/css/index.css
+++ b/app/Themes/Admin/assets/css/index.css
@@ -548,8 +548,8 @@ html {
   -ms-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  overflow-x: hidden;
-  overflow-y: scroll;
+  /*overflow-x: hidden;
+  overflow-y: scroll;*/
   height: 100%;
 }
 body {
